metodos de logros añadidos a la api
