# api.yml
@@ -244,14 +244,6 @@ paths:
               schema:
                 type: string
                 example: {"message":"no results found"}
-  /pri/csv_download:
-    get:
-      tags:
-      - "camino"
-      summary: "Downloads csv file with caminos' data"
-      responses:
-        "200":
-          description: "File downloaded"
   /pri/showOtherProfile:
     get:
       tags:
@@ -274,5 +266,86 @@ paths:
                 items:
                   type: "object"
                 example: [{"id":450,"name":"Javi","surname":"Carrillo","email":"javichu@gmail.com","picture":"","achievements":[{"id":"186","id_logro":"620","id_usuario":"450","date":"2020-02-05"},{"id":"188","id_logro":"622","id_usuario":"450","date":"2020-02-05"},{"id":"187","id_logro":"617","id_usuario":"450","date":"2019-06-23"}],"paths":[{"id":"114","id_usuario":"450","id_camino":"191","start_date":"2021-01-01","finish_date":"2021-01-15","status":"Completed"},{"id":"115","id_usuario":"450","id_camino":"192","start_date":"2021-04-01","finish_date":null,"status":"Active"}],"activePath":{"id":"115","id_usuario":"450","id_camino":"192","start_date":"2021-04-01","finish_date":null,"status":"Active"}}]
-      
+  /pri/csv_download:
+    get:
+      tags:
+      - "camino"
+      summary: "Downloads csv file with caminos' data"
+      responses:
+        "200":
+          description: "File downloaded"
+  /pri/AllAchievements:
+    get:
+      tags:
+      - "logros"
+      summary: "Shows all available achievements"
+      responses:
+        "200":
+          description: "Shows all"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: "object"
+                example: [{"id":"36","name":"Primeros pasos","description":"10km. recorridos"},{"id":"37","name":"Un paseo","description":"20km. recorridos"},{"id":"38","name":"El aventurero","description":"Duermes al aire libre"}]
+  /pri/MyAchievements:
+    get:
+      tags:
+      - "logros"
+      summary: "Shows user's achievements"
+      responses:
+        "200":
+          description: "Shows achievements that the user has completed"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: "object"
+                example: [{"id":"19","id_logro":"36","id_usuario":"76","date":"2018-12-30"},{"id":"20","id_logro":"41","id_usuario":"76","date":"2020-02-05"}]
+  /pri/addAchievement:
+    get:
+      tags:
+      - "logros"
+      summary: "Adds user achivement by id"      
+      parameters:
+        - name: id_logro
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: date
+          in: query
+          required: true
+          schema:
+            type: date
+      responses:
+        "200":
+          description: "Achivement added"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"success"}
+  /pri/deleteAchievement:
+    get:
+      tags:
+      - "logros"
+      summary: "Deletes user achivement by id"      
+      parameters:
+        - name: id_logro
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: "Achivement deleted"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"success"}
+  
 
